--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,16 +13,20 @@ jobs:
     strategy:
       matrix:
         python:
+          - version: "3.6"
+            toxenv: "py36"
+          - version: "3.7"
+            toxenv: "py37"
           - version: "3.8"
             toxenv: "py38"
-          # - version: "3.9"
-          #   toxenv: "py39"
-          # - version: "3.10"
-          #   toxenv: "py310"
-          # - version: "3.11"
-          #   toxenv: "py311"
-          # - version: "3.12-dev"
-          #   toxenv: "py12"
+          - version: "3.9"
+            toxenv: "py39"
+          - version: "3.10"
+            toxenv: "py310"
+          - version: "3.11"
+            toxenv: "py311"
+          - version: "3.12-dev"
+            toxenv: "py12"
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
