--- a/demo/app.yaml
+++ b/demo/app.yaml
@@ -1,12 +1,10 @@
-runtime: python27
-api_version: 1
-threadsafe: yes
+runtime: python311
 
-env_variables:
+app_engine_apis: true
+
+manual_scaling:
+  instances: 1
 
 handlers:
-- url: /blobstore.*
-  script: blobstore.app
-
-- url: /.*
-  script: main.app
+  - url: /.*
+    script: auto
